# -MGiC-Observers

./: README.md
app/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  CMakeLists.txt
app/ASGEGame/classes/States/: GameOver.cpp  GameOver.h  GameWon.cpp  GameWon.h  HospitalState.cpp  HospitalState.h  InterrogationState.cpp  InterrogationState.h  MainGameState.cpp  MainGameState.h  PauseState.cpp  PauseState.h  State.cpp  State.h  TitleState.cpp  TitleState.h
app/ASGEGame/classes/gameobject/: Buttons.cpp  Buttons.hpp  GameObject.cpp  GameObject.h  QuantomObject.cpp  QuantomObject.h
app/ASGEGame/classes/gameobject/objects/: Projectile.cpp  Projectile.hpp
app/ASGEGame/classes/gameobject/player/: Player.cpp  Player.h
app/ASGEGame/classes/gameplay/: Interrogation.cpp  Interrogation.h  InterrogationQuestion.cpp  InterrogationQuestion.hpp
app/ASGEGame/classes/utility/: BoundingBox.cpp  BoundingBox.h  Interpolation.cpp  Interpolation.h  SpriteComponent.cpp  SpriteComponent.h  Tiles.cpp  Tiles.h  Vector2.cpp  Vector2.h
app/ASGEGame/data/images/tiled/: NE-connor-tileset.tsx  Room_Builder.tsx  milkian-hospital-interior.tsx
app/ASGEGame/data/map/: hospital_map - Copy.tmx  hospital_map.tmx
app/ASGEGame/data/sprites/characters/: desktop.ini
